<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MCCHymns</string>
    <string name="version_number">1.1.1</string>
    <item name="database_version" format="integer" type="integer">2</item>

    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="bitrient_inc">Bitrient Inc.</string>
    <string name="year">2015</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="irad_d_sankey">IRA DAVID SANKEY</string>
    <string name="as_compiled">as compiled under the direction of</string>
    <string name="title_activity_hymn">HymnActivity</string>
    <string name="placeholder_text">The foundational elements of print based design typography,
        grids, space, scale, color </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string-array name="pref_font_size_entries">
        <item>Small</item>
        <item>Normal</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>

    <string-array name="pref_font_size_values">
        <item>14</item>
        <item>18</item>
        <item>22</item>
        <item>26</item>
        <item>30</item>
    </string-array>

    <string-array name="sort_type">
        <item>Hymn number</item>
        <item>First lines</item>
    </string-array>

    <!-- Content description for a color square. -->
    <string name="color_swatch_description">Color <xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <!-- Content description for a selected color square. -->
    <string name="color_swatch_description_selected">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> selected</string>

    <string name="pref_key_background_texture">pref_use_texture_switch</string>
    <string name="pref_title_background_texture">Background texture</string>
    <string name="pref_summary_background_texture">Show background texture in hymn view</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_key_favourites">pref_show_favorites</string>
    <string name="pref_title_favourites">Favourites</string>
    <string name="pref_summary_favourites">Show favourites on start</string>
    <string name="pref_default_font_size">18</string>
    <string name="pref_key_font_size">pref_hymn_font_size</string>
    <string name="pref_title_hymn_font_size">Font size</string>

    <string name="pref_default_font">lilac_malaria.ttf</string>
    <string name="pref_key_font_color">pref_hymn_font_color</string>
    <string name="pref_title_hymn_font_color">Font colour</string>
    <string name="pref_key_background_color">pref_hymn_background_color</string>
    <string name="pref_title_hymn_bg_color">Background colour</string>
    <string name="pref_key_font_style">pref_hymn_fonts</string>
    <string name="pref_title_font_style">Font style</string>
    <string name="pref_key_keep_screen">keep_screen</string>
    <string name="pref_title_keep_screen">Keep screen awake</string>
    <string name="pref_summary_keep_screen">Screen stays awake when on hymn-view page</string>
    <string name="pref_header_about">Information</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_summary_feedback">Questions? Suggestions?</string>

    <string name="title_activity_about">MCCHymns</string>
    <string name="action_share">Share</string>
    <string name="undo">Undo</string>
    <string name="twelve_hundred_hymns">Twelve hundred hymns</string>
    <string name="sacred_songs_solos">Sacred songs and solos</string>

    <string name="empty_hymn_number">Please provide hymn number.</string>
    <string name="title_activity_splash_screen">Splash Screen</string>

    <string name="hymns">Hymns</string>
    <string name="empty_favorites_title">No hymn found.</string>
    <string name="empty_favorites_message">Add hymn to favorites and it will show up here.</string>
    <string name="try_another_search">Try another search</string>
    <string name="no_hymns_found">No hymns were found that match your search</string>
    <string name="remove_selected">Remove</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="remove_all">Remove all</string>
    <string name="confirm_clear_favourites">Remove all from favourites?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="operation_not_undone">This operation cannot be undone. Would you like to continue?</string>
    <string name="chorus">Chorus</string>
    <string name="added_favourites">Added to favourites</string>
    <string name="removed_favourites">Removed from favourites</string>
    <string name="double_tap_screen">Double tap screen to show chorus or drag from bottom of screen.</string>
    <string name="help">Help</string>
    <string name="version">Version</string>
    <string name="title_activity_help">Help</string>
    <string name="help_intro">MCC is Roman numerals for twelve hundred (1200) hence the name MCCHymns for the twelve hundred compiled hymns commonly referred to as the Sacred Songs and Solos Hymns.</string>
    <string name="help_body">Basically you have the Hymns and Favourites section. The Hymns section shows the entire hymns collection sorted by hymn number by default. To view the index of first lines, simply change from the provided options sort menu.  The Favourites section shows all the hymns selected as favourites. These hymns could be added and removed by using the star (&#9733;) in the hymn view.</string>
    <string name="help_body2">The search box provided could be used to search for hymns using keywords and the floating dialpad could be used to jump straight to any hymn by number.   The hymn view appearance is fully customisable in application settings.</string>
    <string name="share_via">Share Via</string>
    <string name="get_mcchymns_share">%1$s\n\nGet MCCHymns app for easy access to your favourite hymns. https://play.google.com/store/apps/details?id=com.bitrient.mcchymns</string>
</resources>
