<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:title="@string/version"
        android:summary="@string/version_number"
        android:enabled="false">
    </Preference>

    <Preference android:title="@string/pref_title_feedback"
        android:summary="@string/pref_summary_feedback">
        <intent android:action="com.bitrient.mcchymns.FeedbackActivity" />
    </Preference>

    <Preference android:title="@string/help"
        android:summary="Get support information">
        <intent android:action="com.bitrient.mcchymns.HelpActivity" />
    </Preference>

    <Preference android:title="@string/pref_title_about">
        <intent android:action="com.bitrient.mcchymns.AboutActivity" />
    </Preference>
</PreferenceScreen>