<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.bitrient.mcchymns.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_gear"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.bitrient.mcchymns.SettingsActivity$AppearancePreferenceFragment"
        android:icon="@drawable/ic_settings_palette"
        android:title="@string/pref_header_appearance" />

    <header
        android:fragment="com.bitrient.mcchymns.SettingsActivity$InformationPreferenceFragment"
        android:icon="@drawable/ic_menu_info"
        android:title="@string/pref_header_about" />

</preference-headers>
