<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.bitrient.mcchymns.fragment.SplashScreenActivityFragment"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/credit_block">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@color/gray"
            android:shadowRadius="5"
            android:shadowDx="2"
            android:shadowDy="2"
            android:textColor="@android:color/white"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sacred_songs_solos"
            android:textColor="@color/gransboro"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/twelve_hundred_hymns"
            android:textColor="@color/silver"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/as_compiled"
            android:textColor="@color/silver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/irad_d_sankey"
            android:textSize="16sp"
            android:textColor="@color/gransboro" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/splash_progress"
        android:layout_marginTop="-7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_alignParentTop="true"
        android:background="@color/selected_overlay"/>

    <LinearLayout
        android:id="@+id/credit_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/developers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitrient_inc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:layout_toEndOf="@+id/developers"
                android:layout_toRightOf="@+id/developers"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/all_rights_reserved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_rights_reserved"
                android:layout_toEndOf="@+id/year"
                android:layout_toRightOf="@+id/year"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
